# Privacy-Preserving-Compliance

./: .gitignore  BENCHMARK_README.md  Cargo.toml  DEMO_PLAN.md  DEMO_README.md  LICENSE  ONBOARDING_TASK.md  PLANNING.md  README.md  REGULATOR_CLI_README.md  example.env  package.json
circuits/dual_membership/src/: main.nr
circuits/hello_world/: Nargo.toml
circuits/membership/src/: main.nr
circuits/merkle/src/: lib.nr
circuits/non_membership/: Nargo.toml
circuits/non_membership/src/: main.nr
contracts/src/: ComplianceDefinition.sol
proof-manager/: Cargo.toml
regulator-cli/: Cargo.toml
regulator-cli/src/: bb.rs  cast.rs  eth.rs  etherscan.rs  forge.rs  ipfs.rs  main.rs  nargo.rs  receipt.rs
regulator-cli/src/commands/: init.rs  mod.rs  new_compliance_definition.rs  publish.rs  update.rs  update_circuit.rs  update_params.rs
regulator-cli/tests/: cli.rs
scripts/: pin-to-pinata.mjs  update-circuit-cid.sh
verifier-base-contract/src/: ComplianceDefinition.sol
verifier-base-contract/test/: ComplianceDefinition.t.sol
