[package]
name = "regulator-cli"
version = "0.1.0"
edition = "2024"
authors = ["Joss Duff"]

[dependencies]
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
tempfile = "3"
tokio = { workspace = true }
